fixed css flex on wraper1

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -156,7 +156,7 @@ html {
 }
 
 
-@media (max-width:500px)  { 
+/* @media (max-width:500px)  { 
     .wrapper{
         text-align: center;
         background: #FFFFFF;
@@ -202,14 +202,13 @@ html {
     }
     .btn2-wrapper{
         display: flex;
-        justify-content: center;
         border: 3px dashed #FF605C;
         color:#FF605C;
         margin-bottom: 10%;
         padding: 25%;
 
     }
-}
+} */
  /* tablet, landscape iPad, lo-res laptops ands desktops */ 
 @media (max-width:900px)  {
     .wrapper{
@@ -250,7 +249,6 @@ html {
     }
     .btn2-wrapper{
         display: flex;
-        justify-content: center;
         border: 3px dashed #FF605C;
         color:#FF605C;
         margin-bottom: 10%;
